# rust-simple-clean-architecture

./: .env  .env.example  Cargo.toml  README.md  bacon.toml
migrations/: 20241116152536_subscription_types.down.sql  20241116152536_subscription_types.up.sql  20241116152537_create_table_subscriptions.down.sql  20241116152537_create_table_subscriptions.up.sql  20241116152538_roles.up.sql  20241116152539_provinces.down.sql  20241116152539_provinces.up.sql  20241116152540_cities.down.sql  20241116152540_cities.up.sql  20241116152541_schools.down.sql  20241116152541_schools.up.sql
src/: main.rs
src/cmd/middlewares/: auth.rs
src/cmd/routes/: auth.rs  city_router.rs  mod.rs  province_router.rs  role_router.rs  school_router.rs  subscription_router.rs  subscription_type_router.rs  user_router.rs
src/database/: postgresql.rs
src/helpers/: auth.rs  custom_response.rs  mod.rs
src/internal/: mod.rs
src/internal/app/repositories/: city_repository.rs  db_transaction_repository.rs  mod.rs  province_repository.rs  role_repository.rs  school_repository.rs  (+3 more)
src/internal/entities/: auth.rs  city.rs  mod.rs  province.rs  role.rs  school.rs  subscription.rs  subscription_type.rs  user.rs
src/internal/handlers/: auth_handler.rs  city_handler.rs  mod.rs  province_handler.rs  role_handler.rs  school_handler.rs  subscription_handler.rs  subscription_type_handler.rs  user_handler.rs
src/pkg/: mod.rs  s3.rs
src/pkg/dto/: auth_dto.rs  mod.rs  role_dto.rs  school_dto.rs  subscription_dto.rs  subscription_type_dto.rs  user_dto.rs
src/pkg/errors/: custom_error.rs
(+9 files in other folders)
