[package]
name = "sekula-be"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features = ["serde", "default"]}
tokio = {version = "1.41.1", features = ["full"]}
sqlx = {version = "0.8.2", features = ["chrono", "runtime-tokio", "uuid", "postgres"]}
actix-web = "4.9.0"
actix-cors = "0.7.0"
dotenv = "0.15.0"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
env_logger = "0.11.5"
reqwest = {version = "0.12.9", features = ["json"]}