[package]
name = "sekula-be"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features = ["serde", "default"]}
tokio = {version = "1.41.1", features = ["full"]}
sqlx = {version = "0.8.2", features = ["chrono", "runtime-tokio", "uuid", "postgres"]}
actix-web = "4.9.0"
actix-cors = "0.7.0"
dotenv = "0.15.0"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
env_logger = "0.11.5"
reqwest = {version = "0.12.9", features = ["json"]}
aws-config = "1.5.10"
aws-sdk-s3 = "1.65.0"
actix-multipart = "0.7.2"
bcrypt = "0.16.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"